[package]
name = "llama2_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.7"
rayon = "1.5"

[profile.release]
debug = true

[features]
# Choose between Llama2 models - these are mutually exclusive
7B = []
13B = []
70B = []

# optionally enable AVX512 if your chipset supports it
avx512 = []

# currently enables Q_4_128 quantization
quantized = []

default = ["13B", "quantized"]