[package]
name = "llama2_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.7"
rayon = "1.5"
pyo3 = "0.18.1"
pythonize = "0.18.0"

[lib]
name = "llama2_rs"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "llama2_rs"
path = "src/bin.rs"

[profile.release]
debug = true

[features]
model_size = []